Update editor styles

--- a/UnityInventory/Packages/com.foggywoods.inventories/Editor/UI/InventoriesStyles.uss
+++ b/UnityInventory/Packages/com.foggywoods.inventories/Editor/UI/InventoriesStyles.uss
@@ -1,8 +1,8 @@
 .container {
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     border-left-width: 1px;
     border-right-width: 1px;
     border-top-width: 1px;
@@ -16,4 +16,11 @@
     padding-right: 2px;
     padding-top: 2px;
     padding-bottom: 2px;
+}
+
+.container:hover {
+    border-left-color: rgba(70, 96, 124, 255);
+    border-right-color: rgba(70, 96, 124, 255);
+    border-top-color: rgba(70, 96, 124, 255);
+    border-bottom-color: rgba(70, 96, 124, 255);
 }
